Add line numbers to code samples

--- a/_sass/_jekyll-mono.scss
+++ b/_sass/_jekyll-mono.scss
@@ -300,3 +300,10 @@ button.button-primary:focus {
 	pointer-events: auto;
 }
 
+.lineno {
+  border-right: 1px solid #666;
+  padding-right: 4px;
+  margin-right: 6px;
+  color: #666;
+}
+
