--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,6 +11,7 @@ layout: blog
   </div>
 
   {% include share-bar.html %}
+  {% include related-posts.html %}
   {% include disqus.html %}
 </article>
 
