--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,6 +10,8 @@ layout: blog
     {{ content }}
   </div>
 
+  Tags: {{ page | tags }}
+
   {% include share-bar.html %}
   {% include related-posts.html %}
   {% include disqus.html %}
