--- a/_sass/_jekyll-mono.scss
+++ b/_sass/_jekyll-mono.scss
@@ -307,3 +307,13 @@ button.button-primary:focus {
   color: #666;
 }
 
+.tag-posts h2 {
+  margin-bottom: 0;
+  a {
+    color: $h1-color;
+  }
+}
+
+.tag-posts h3 {
+  margin-top: 0;
+}
