--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -23,7 +23,7 @@
         <div class="post-heading">
             <a href="{{ site.baseurl }}/" class="back-home">&laquo; Back home</a>
             <h1>{{page.title}}</h1>
-            <span class="meta">Posted by <a href="{{ site.baseurl }}/about"> {{page.author}}
+            <span class="meta">Posted by <a href="{{ site.baseurl }}/about-me"> {{page.author}}
               </a> on {{ page.date | date: "%B %e, %Y" }}
             </span>
         </div>
