Finish a few drafts

--- a/_sass/_jekyll-mono.scss
+++ b/_sass/_jekyll-mono.scss
@@ -328,3 +328,11 @@ button.button-primary:focus {
 .tag-posts h3 {
   margin-top: 0;
 }
+
+code.highlighter-rouge {
+  font-weight: bold;
+}
+
+.highlighter-rouge {
+  font-size: 80%;
+}
