Add adsense to post page

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,6 +17,7 @@ layout: blog
     {% endfor %}
   ]</span>
 
+  {% include adsense.html %}
   {% include share-bar.html %}
   {% include related-posts.html %}
   {% include disqus.html %}
