Add margins to adsense

--- a/style.scss
+++ b/style.scss
@@ -292,6 +292,11 @@ footer {
   text-align: center;
 }
 
+.adsbygoogle {
+  margin-top: 12px;
+  margin-bottom: 12px;
+}
+
 @import "highlights";
 @import "jekyll-mono";
 @import "sharebuttons";
