--- a/_includes/adsense-2.html
+++ b/_includes/adsense-2.html
@@ -1,10 +1,10 @@
 {% if jekyll.environment == "production" %}
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- ncona-ad-unit -->
+<!-- ncona-ad-unit-2 -->
 <ins class="adsbygoogle"
      style="display:block"
      data-ad-client="ca-pub-9739637903305614"
-     data-ad-slot="5373587354"
+     data-ad-slot="6203561092"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
 <script>
